src/snapshots/tap_parser__test__subtest_with_name.snap
---
source: src/test.rs
expression: "parser.parse(indoc! {\n                \"\n            TAP version 14\n            1..1\n            # Subtest: subtest\n                ok 1 - inside subtest\n                1..1\n            ok 1 - subtest\n        \"\n            }).unwrap()"
---
- Plan:
    count: 1
    reason: ~
- Subtest:
    name: subtest
    statements:
      - TestPoint:
          result: true
          number: 1
          desc: inside subtest
          directive: ~
          yaml: []
      - Plan:
          count: 1
          reason: ~
    ending:
      result: true
      number: 1
      desc: subtest
      directive: ~
      yaml: []

