src/snapshots/tap_parser__test__sucess_fail_bare_as_subtest.snap
---
source: src/test.rs
expression: parser.parse(&nested_doc).unwrap()
---
- Plan:
    count: 1
    reason: ~
- Subtest:
    name: inner
    statements:
      - Plan:
          count: 1
          reason: ~
      - TestPoint:
          result: true
          number: ~
          desc: ~
          directive: ~
          yaml: []
      - TestPoint:
          result: false
          number: ~
          desc: ~
          directive: ~
          yaml: []
    ending:
      result: true
      number: 1
      desc: inner
      directive: ~
      yaml: []

