src/snapshots/tap_parser__test__trailing_empty.snap
---
source: src/test.rs
expression: parser.parse(document).unwrap()
---
- Plan:
    count: 0
    reason: ~

