src/snapshots/tap_parser__test__trailing_lines_after_yaml.snap
---
source: src/test.rs
expression: parser.parse(document).unwrap()
---
- Plan:
    count: 1
    reason: ~
- TestPoint:
    result: true
    number: 1
    desc: this is a success
    directive: ~
    yaml: []

